fix overflow for sliders

--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -24,7 +24,7 @@
   display: block;
   box-sizing: border-box;
   padding-top: 94px;
-  width: 100%;
+  width: 100vw;
   max-width: 100vw;
 
   @include screen('xl', max, 2) {
